package com.studio6.app.common.proto;

option java_package = "com.studio6.app.common.proto";
option java_outer_classname = "CommonProtos";

message WorkQueue {

  message Item {
    message Attempt {
      required string creation_date = 1;
      optional string message       = 2;
    }

    required string id                       = 1;
    required string creation_date            = 2;
    required bytes item                      = 3;
    optional int64 max_process_ms            = 4;
    optional int64 max_attempts              = 5;
    optional int64 delay_between_attempts_ms = 6;
    optional Attempt in_progress_attempt     = 7;
    repeated Attempt attempt                 = 8;
  }

  message Delayed {
    required string id                 = 1;
    required bytes item                = 2;
    required string datetime_to_submit = 3;
    required string qname              = 4;
  }
}
